[gd_scene load_steps=5 format=3 uid="uid://6yvpw3kb07ib"]

[ext_resource type="FontFile" uid="uid://dvk5jqi4h2j37" path="res://assets/the moon game /brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="1_8f8xy"]
[ext_resource type="Script" uid="uid://blnh48jwrowve" path="res://main menu/main_menu.gd" id="1_m48o8"]
[ext_resource type="FontFile" uid="uid://c018jvqwk1xf8" path="res://assets/the moon game /brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="2_m48o8"]
[ext_resource type="PackedScene" uid="uid://dr54s4hngjws7" path="res://scenes/game.tscn" id="2_ra13p"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m48o8")
start_level = ExtResource("2_ra13p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.87058824, 0.10980392, 0.14901961, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="game title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9999996, 0.97348756, 0.9715002, 1)
theme_override_colors/font_outline_color = Color(0.5529412, 0.043137256, 0, 1)
theme_override_constants/line_spacing = 11
theme_override_constants/outline_size = 14
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("1_8f8xy")
theme_override_font_sizes/font_size = 50
text = "LISE ME ALONE
CARA√èBES TOUR"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="start_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
size_flags_stretch_ratio = 2.1
theme_override_colors/icon_normal_color = Color(1, 0.9529412, 1, 0.4)
theme_override_fonts/font = ExtResource("2_m48o8")
theme_override_font_sizes/font_size = 24
text = "START THE TOUR"

[node name="separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_m48o8")
theme_override_font_sizes/font_size = 24
text = "EXIT GAME"
